Bug 886015 - Console js input looks broken on OS X; r=vporof
UltraBlame original commit: 4f03fbc6f5fde5460ff6a4fc8e746017f718178e

--- a/browser/themes/shared/devtools/webconsole.inc.css
+++ b/browser/themes/shared/devtools/webconsole.inc.css
@@ -393,6 +393,18 @@ jsterm
 -
 input
 -
+container
+{
+background
+:
+white
+;
+}
+.
+jsterm
+-
+input
+-
 node
 .
 jsterm
